EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==01/16/2011==
Caryatis: Fix for Phantom line of discs not working.
Caryatis: Fix for buffdurationformula 5(0 value results in a 3 tick spell, was set to 1 tick).
Caryatis: Fix for discs(and AAs) setting a reuse timer if used while not able to(ie stunned)
Caryatis: Implemented SE_VoiceGraft
Caryatis: Added scaling for pet focus items based on the pet power in the spell file.

==01/15/2011==
Caryatis: Fix for fear effects not fading when the buff does, also added check so that a negative recast is not set with SE_ReduceReuse

==01/14/2011==
Trevius: (l0stmancd) Fix for invalid slot move warnings on SoF+ clients.
Trevius: (l0stmancd) Fix for potential item loss issue while using an inventory augmentation sealer.
Trevius: Adjustment to the augmentation code logic to remove potential issues.
Trevius: Added updateclient option to Perl Client TakeMoneyFromPP(copper, updateclient=false).
Derision: UF: Translated command code for /pet hold
Caryatis: Implemented SE_ReduceReuseTimer(epic 1.5/2.0 focuses, sof type3), SE_BlockNextSpellFocus(chance to block next spell matching focus)
Caryatis: Implemented SE_SetBodyType, SE_SpellOnDeath, SE_BlockSpellEffect, SE_Leap, SE_ImmuneFleeing, SE_AddMeleeProc
Caryatis: Delay Death AA is now functional(optional sql).

Optional SQL:
utils/sql/svn/1823_optional_delay_death.sql

==01/13/2011==
JJ: (Leere) Exported quest::LearnRecipe(recipe_id) to PERL

==01/12/2011==
gaeorn: possible fix for some short duration buffs (bard songs) fading one tick early
Caryatis: Changed SE_NoCombatSkills to SE_CombatSkills(0 = spells only, 1 = discs only)
Caryatis: Implemented SE_SpellDurationIncByTic(formerly SE_FocusCombatDurationMod), it adds tics to spells/discs
Caryatis: Added support for Special Attack 'Y'(Ranged Attack), so when an NPC can't reach or summon his target, he will use range if able to